# vbrpg

./: .dockerignore  .gitignore  CODEBUDDY.md  DEMO.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml  package-lock.json  start-demo.sh  test-api.sh  todo.md
backend/: .coveragerc  .env.example  Dockerfile  TEST_REPORT.md  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 005_add_participant_metadata.py  20251108_0000_001_initial.py  20251108_0100_002_game_rooms.py  20251108_1925_003_game_sessions.py  20251109_1052_004_add_room_ownership.py  20251109_1053_005_add_participant_metadata.py  20251126_single_user_migration.py  20251128_0006_add_game_roles.py  20251129_001_initial_schema.py
backend/scripts/: backup_database.sh  cleanup_guests.py  seed_data.py  test_deepseek_llm.py
backend/src/: database.py
backend/src/api/: __init__.py  core_api.py  game_api.py  game_routes.py  games.py  monitoring.py  players.py  rooms.py  schemas.py  sessions.py  user_routes.py  werewolf_routes.py
backend/src/constants/: __init__.py  game_types.py  roles.py
backend/src/integrations/: llm_client.py
backend/src/models/: __init__.py  ai_agent.py  base.py  game.py  game_room.py  game_room_participant.py  game_session.py  game_state.py  game_type.py  player.py  player_profile.py  session.py  user.py
backend/src/services/: __init__.py  ai_agent_service.py  ai_scheduler.py  ai_service.py  game_room_service.py  game_state_service.py  player_service.py  werewolf_game_service.py
backend/src/utils/: ai_logger.py  config.py  errors.py  helpers.py  input_processing.py  logging_config.py  rate_limiter.py  room_codes.py  sanitization.py  sessions.py  username_generator.py  validation.py
backend/src/websocket/: __init__.py  handlers.py  server.py  sessions.py  werewolf_handlers.py
backend/tests/: conftest.py  test_player_service.py
backend/tests/fixtures/: room_fixtures.py
backend/tests/helpers/: websocket_helpers.py
backend/tests/integration/: test_complete_game_flow.py  test_monitoring.py  test_player_participation.py  test_players_api.py  test_rooms_api.py  test_singleplayer_flow.py  test_werewolf_api.py
backend/tests/performance/: test_ai_agent_latency.py  test_concurrent_joins.py  (+1 more)
(+268 files in other folders)
